gccida/c0/df_reg_clobber_gen
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_reg_clobber_gen/src/df.c:1116:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2), v2); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_reg_clobber_gen/src/df.c:1116:49: error: expected expression
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2), v2); 
                                                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_reg_clobber_gen/src/obj/df.o] Error 1
